# drf-typescript-generator

./: pyproject.toml
.github/workflows/: CI.yaml
drf_typescript_generator/: globals.py
tests/: settings.py  test_drf_typescript_generator.py
