[tool.poetry]
name = "drf-typescript-generator"
version = "0.1.1"
description = "Package for generating TypeScript types from DRF serializers"
authors = ["napmn <lukass135@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/remastr/drf-typescript-generator"
keywords = ["django", "drf"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.2,<6.0"
djangorestframework = "^3.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
